# SuperLiveProject

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/aspirin/liveproject/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/commandline/: config.h
app/src/main/java/com/aspirin/liveproject/: Camera2Activity.java  FFmpegUtils.java  MainActivity.kt
app/src/main/java/com/aspirin/liveproject/camera/: Camera2Helper.java  ImageUtil.java
app/src/main/res/layout/: activity_camera2.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths_app.xml
app/src/test/java/com/aspirin/liveproject/: ExampleUnitTest.kt
ffmpeglib/: build.gradle
ffmpeglib/src/androidTest/java/com/aspirin/ffmpeglib/: ExampleInstrumentedTest.java
ffmpeglib/src/main/cpp/: CMakeLists.txt  ffmpeglib.cpp
ffmpeglib/src/main/cpp/include/: LogUtils.h
ffmpeglib/src/main/java/com/aspirin/ffmpeglib/: FFmpegUtils.java
ffmpeglib/src/test/java/com/aspirin/ffmpeglib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
